--- a/services/on-start.service
+++ b/services/on-start.service
@@ -6,7 +6,7 @@ After=network-online.target
 Type=simple
 User=pi
 Group=pi
-ExecStart=$HOME/on-start.sh
+ExecStart=%h/on-start.sh
 Restart=on-failure
 
 [Install]
