--- a/services/on-start.service
+++ b/services/on-start.service
@@ -6,8 +6,7 @@ After=network-online.target
 Type=simple
 User=pi
 Group=pi
-ExecStart=%h/on-start.sh
-Restart=on-failure
+ExecStart=HOMEDIR/on-start.sh
 
 [Install]
 WantedBy=multi-user.target
